feat: 新增註冊會員 API 文件
